k8s/ingress-test-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-test-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: mychat
          image: exilemirror/ingress-test:version2
          ports:
            - containerPort: 5000
