k8s/ingress-config.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    name: ingress-service
    annotations:
        kubernetes.io/ingress.class: nginx
        nginx.ingress.kubernetes.io/use-regex: "true"
        nginx.ingress.kubernetes.io/rewrite-target: /
        nginx.ingress.kubernetes.io/configuration-snippet: |
          more_set_headers "Server: mychat";
spec:
    rules:
        - http:
              paths:
                  - path: /
                    # UPDATE THIS LINE ABOVE
                    backend:
                        serviceName: mychat-cluster-ip-service
                        servicePort: 5000
